--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Snapflix</title>
-    <meta name="description" content="Best videos ever.">
+    <meta name="description" content="Social, Local, Movies.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
